Fixup colors and positions; support dark mode

--- a/docs/app.css
+++ b/docs/app.css
@@ -1,6 +1,8 @@
 :root {
-  --global-bg-c: #eab6fc;
-  --item-sep-col: #e088ff;
+  color-scheme: light dark;
+  /* --global-bg-c: #eab6fc; */
+  /* --global-bg-c: rgb(13, 102, 13); */
+  --item-sep-col: lightgray;
 }
 html {
   height: 100%;
@@ -19,18 +21,18 @@ header img {
 }
 
 body {
-  font-size-adjust: 1.3;
+  /* font-size-adjust: 1.3; */
   font-size: medium;
   display: flex;
   flex-flow: column;
   height: 100%;
   overflow: hidden;
-  background-color: var(--global-bg-c);
+  /* background-color: var(--global-bg-c); */
   margin: 0px;
 }
 
 input {
-  font-size: 22px;
+  font-size: medium;
 }
 
 header {
@@ -54,7 +56,7 @@ div.button {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: normal;
 }
 
 div.button:active {
@@ -75,7 +77,7 @@ div.splitAmountBox {
   position: relative;
   list-style-type: none;
   padding: 0px;
-  margin: 0px;
+  margin: 5px 0px;
   overflow: hidden;
   align-items: flex-end;
 }
@@ -102,7 +104,7 @@ div.splitAmountBox {
   justify-content: start;
   align-items: baseline;
   width: 100vw;
-  background-color: var(--global-bg-c);
+  background-color: Canvas;
   padding-top: 5px;
   padding-bottom: 5px;
   position: relative;
@@ -120,7 +122,7 @@ div.splitAmountBox {
 }
 
 .friendsListItem .fli-deleter {
-  background: red;
+  /* background: red; */
   flex: 1 1 12vw;
   position: relative;
 }
@@ -196,7 +198,7 @@ div.splitAmount {
   flex: 0 0 min-content;
   overflow: clip;
   padding-right: 2%;
-  background-color: var(--global-bg-c);
+  background-color: Canvas;
   border: solid 1px linen;
   border-left-style: none;
   border-radius: 0 5vw 5vw 0;
@@ -219,7 +221,7 @@ div.splitAmount {
   position: sticky;
   top: 0;
   display: flex;
-  background-color: var(--global-bg-c);
+  /* background-color: var(--global-bg-c); */
   justify-content: center;
   z-index: 1;
 }
